--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -16,6 +16,9 @@
         padding: 8px 10px;
         border-radius: 7px;
     }
+    #main{
+        justify-content: space-between;
+    }
 }
 @media (min-width: 651px) and (max-width: 1100px){
     h1{
@@ -34,6 +37,9 @@
         font-size: 20px;
         padding: 12px 30px;
         border-radius: 10px;
+    }
+    #main{
+        justify-content: space-around;
     }
 
 }
