--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* border: 1px solid red; */
 }
 
 /* utitlity classes */
@@ -14,7 +15,7 @@
 }
 
 /* header section */
-#header {
+header {
     background-color: blueviolet;
     color: aliceblue;
     padding-block: 12px;
@@ -68,7 +69,7 @@ li {
     list-style: none;
     width: 15rem;
     height: 4rem;
-    line-height:60px;
+    line-height: 60px;
     border: 2px solid black;
     border-radius: 8px;
     margin-block: 10px;
@@ -100,11 +101,19 @@ button:hover {
     background-color: rgba(196, 196, 196, 0.777);
 }
 
+/* Result Section */
+#Result {
+    color: rgb(92, 67, 233);
+    background-color: yellow;
+    font-style: italic;
+    margin-bottom: 30px;
+    padding: 10px 15px;
+    border-radius: 8px;
+    border: 2px solid rgb(92, 67, 233);
+}
+
 /* footer section */
-footer{
+footer {
     padding: 25px 0;
     background-color: black;
 }
-
-
-
